resolves UserList issue with warped border, at expense of left-aligning Status components within Status column

--- a/src/Components/UserList/style.module.css
+++ b/src/Components/UserList/style.module.css
@@ -31,8 +31,5 @@ td {
 }
 
 .status {
-  display: flex;
   align-content: center;
-  justify-content: center;
-  padding: 26px;
 }
